# nft-lending-contracts

./: .gitignore  README.md  deploy-devnet.interaction.json  deploy-testnet.interaction.json  deployed-contracts.json  erdpy.data-storage.json  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  remix-compiler.config.js  truffle-config.js  tsconfig.json
Elrond/LendingData/: Cargo.toml  empty.c
Elrond/LendingData/abi/: Cargo.toml
Elrond/LendingData/abi/src/: main.rs
Elrond/LendingData/mandos/: changeBoard.scen.json  changeQuorum.scen.json  changeQuorum_tooBig.scen.json  deployAdder_err.scen.json  deployAdder_then_call.scen.json  deployFactorial.scen.json  remove_everyone.scen.json
Elrond/LendingData/tests/: mandos_test.rs
Elrond/LendingData/wasm/: Cargo.toml
Elrond/LendingData/wasm/src/: lib.rs
Elrond/erc1155_elrond_custom/wasm/: Cargo.toml
Elrond/erc1155_elrond_custom/wasm/src/: lib.rs
Elrond/lending_data/: Cargo.toml
Elrond/lending_data/abi/: Cargo.toml
Elrond/lending_data/abi/src/: main.rs
Elrond/lending_data/interaction/: devnet.snippets.sh  playground.py  testnet.snippets.sh
Elrond/lending_data/mandos/: adder.scen.json
Elrond/lending_data/src/: debt_token.rs  lib.rs  linked_list_mapper.rs  loan.rs  loan_status.rs  time_scale.rs  token_type.rs
Elrond/lending_data/tests/: adder_test.rs  mandos_test.rs
Elrond/lending_data/wasm/: Cargo.toml
Elrond/lending_data/wasm/src/: lib.rs
Elrond/nft_generator/wasm/: Cargo.toml
Elrond/nft_generator/wasm/src/: lib.rs
Ethereum/: package.json  truffle-config.js
auxiliary/: DelegateCalled.sol  DelegateCaller.sol  Encoder.sol  StakingTokens.sol
cache/: solidity-files-cache.json
common/: params.ts  paths.ts
contracts/: DistributionTokens.sol  FungibleTokens.sol  GameItems.sol  GameItems1155.sol  GameItems721.sol  Geyser.rar  Geyser.sol  Greeter.sol  IStaking.sol  LendingCore.sol  LendingData - updated.sol  LendingData.min.rar  LendingData.min.sol  LendingData.sol  LendingDataMinified.sol  LendingLogic.sol  LoanGetters.sol  LoanSetters.sol  Loans.sol  Migrations.sol  NFTLendingData.sol  NFTLendingLogic.sol  PATCH NOTES.md  PromissoryNote.sol  README.md  ScTest1.sol  ScTest2.sol  StakingTokens.sol  StaterCore.sol  StaterPool.sol  Test1.sol  Test2.sol  TokenGeyser.sol  TokenPool.sol  old.rar  tokens.rar
helpers/: configuration.ts  constants.ts  contracts-deployments.ts  contracts-getters.ts  contracts-helpers.ts  defender-utils.ts  init-helpers.ts  misc-utils.ts  mock-helpers.ts  oracles-helpers.ts  polygon-utils.ts  tenderly-utils.ts  types.ts
metadata-api/: requirements.txt
migrations/: 1_initial_migration.js  2_deploy_contracts.js
plugins/: deployContract.ts  deploymentMessage.ts  expecting.ts  generateLoanParams.ts
scripts/: debug.js  deploy.js  deploy.ts  deployLendingMethods.ts  deployLendingTemplate.ts  deployStaterDiscounts.ts  deployStaterPromissoryNote.ts
stater_nft/: Cargo.toml
stater_nft/wasm/: Cargo.toml
stater_nft/wasm/src/: lib.rs
tasks/: index.js
test/: Cargo.toml  ERC1155Tradable.js  Lending.js  MyCollectible.js  MyFactory.js  MyLootBox.js  index.ts  sample-test.js  sample-test.ts
test1/: Cargo.toml
typechain-types/: AccessControl.ts  ConditionalEscrow.ts  DistributionTokens.ts  ERC1155.ts  ERC1155Burnable.ts  ERC1155Holder.ts  ERC1155Meta.ts  ERC1155MetaMintBurnMock.ts  ERC1155MetaMintBurnPackedBalanceMock.ts  ERC1155MetaPackedBalance.ts  ERC1155Metadata.ts  ERC1155MetadataMock.ts  ERC1155MintBurn.ts  ERC1155MintBurnMock.ts  ERC1155MintBurnPackedBalance.ts  ERC165.ts  (+77 more)
(+1478 files in other folders)
