[package]
name = "lending_data"
version = "0.0.0"
authors = [ "Gheonea 'DIIMIIM' Emilian", "Stater" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.16.2"
path = "../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.16.2"
path = "../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.16.2"
path = "../elrond-wasm-rs/elrond-wasm-node"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.16.2"
path = "../elrond-wasm-rs/elrond-wasm-debug"