[package]
name = "StaterLending"
version = "0.0.1"
authors = [ "Gheonea 'DIIMIIM' Emilian" , "Stater" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node" ]

[dependencies.elrond-wasm]
version = "0.17.2"

[dependencies.elrond-wasm-derive]
version = "0.17.2"

[dependencies.elrond-wasm-node]
version = "0.17.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.17.2"
